# libdaq

./: CMakeLists.txt  libdaq.pc.in
api/: CMakeLists.txt
example/: CMakeLists.txt
modules/: CMakeLists.txt
test/: CMakeLists.txt
