set(SOURCES
    daqtest.c
    )

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_library(Threads REQUIRED)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../api")

# Dynamic modules build
add_executable(daqtest ${SOURCES})
target_link_libraries(daqtest PRIVATE "-lpthread")
target_link_libraries(daqtest PRIVATE daq)

# Static modules build
add_executable(daqtest_static ${SOURCES})
target_link_libraries(daqtest_static PRIVATE "-lpthread")
target_link_libraries(daqtest_static PRIVATE daq)
target_compile_definitions(daqtest_static PRIVATE -DUSE_STATIC_MODULES)
if(${BUILD_AFPACKET_MODULE})
    target_compile_definitions(daqtest_static PRIVATE -DBUILD_AFPACKET_MODULE)
    target_link_libraries(daqtest_static PRIVATE daq_static_afpacket)
endif()
if(${BUILD_BPF_MODULE})
    target_compile_definitions(daqtest_static PRIVATE -DBUILD_BPF_MODULE)
    target_link_libraries(daqtest_static PRIVATE daq_static_bpf)
endif()
if(${BUILD_DIVERT_MODULE})
    target_compile_definitions(daqtest_static PRIVATE -DBUILD_DIVERT_MODULE)
    target_link_libraries(daqtest_static PRIVATE daq_static_divert)
endif()
if(${BUILD_DUMP_MODULE})
    target_compile_definitions(daqtest_static PRIVATE -DBUILD_DUMP_MODULE)
    target_link_libraries(daqtest_static PRIVATE daq_static_dump)
endif()
if(${BUILD_FST_MODULE})
    target_compile_definitions(daqtest_static PRIVATE -DBUILD_FST_MODULE)
    target_link_libraries(daqtest_static PRIVATE daq_static_fst)
endif()
if(${BUILD_NETMAP_MODULE})
    target_compile_definitions(daqtest_static PRIVATE -DBUILD_NETMAP_MODULE)
    target_link_libraries(daqtest_static PRIVATE daq_static_netmap)
endif()
if(${BUILD_NFQ_MODULE})
    target_compile_definitions(daqtest_static PRIVATE -DBUILD_NFQ_MODULE)
    target_link_libraries(daqtest_static PRIVATE daq_static_nfq)
endif()
if(${BUILD_PCAP_MODULE})
    target_compile_definitions(daqtest_static PRIVATE -DBUILD_PCAP_MODULE)
    target_link_libraries(daqtest_static PRIVATE daq_static_pcap)
endif()
if(${BUILD_TRACE_MODULE})
    target_compile_definitions(daqtest_static PRIVATE -DBUILD_TRACE_MODULE)
    target_link_libraries(daqtest_static PRIVATE daq_static_trace)
endif()
